correct for h1 too big

--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -40,7 +40,7 @@ p {font-size: 0.9em;}
 
 @media all and (max-width: $breakpoint) {
   h1, h2 {
-    font-size: 125%;
+    font-size: 110%;
   } 
   h3, p {
     font-size: 150%;
